--- a/html/products.html
+++ b/html/products.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="/styles/eomp.css" />
+    <link rel="stylesheet" href="../styles/eomp.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samaai's Moonlight Restaurant</title>
   </head>
@@ -31,9 +31,9 @@
         
                   <!-- DROPDOWN MENU -->
                   <ul class="dropdown">
-                    <li><a href="">Dropdown 1 </a></li>
-                    <li><a href="">Dropdown 2</a></li>
-                    <li><a href="">Dropdown 2</a></li>
+                    <li><a href="">Breakfast</a></li>
+                    <li><a href="">Lunch</a></li>
+                    <li><a href="">Dinner</a></li>
                   </ul>
         
                 </li>
