--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="./styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samaai's Moonlight Restaurant</title>
+    <style>
+      .mySlides {display:none;}
+      </style>
   </head>
   <body>
     <header>
@@ -36,7 +41,7 @@
       </nav>
     </header>
     <main>
-
+      
       <!-- <section class="img-slider">
         <div class="slider-container">
           <div class="slide">
@@ -54,7 +59,16 @@
           </div>
         </div>
       </section> -->
+      <h2 class="w3-center">Samaai's moonlight restaurant</h2>
 
+      <div class="w3-content w3-section" style="width:100%;max-width:none;">      
+        <img class="mySlides w3-animate-fading" src="https://i.postimg.cc/2yCKvVdZ/restaurant.webp" style="width:100%;">
+        <img class="mySlides w3-animate-fading" src="https://i.postimg.cc/jdXysKxC/restaurants-sirocco.jpg" style="width:100%">
+        <img class="mySlides w3-animate-fading" src="https://i.postimg.cc/CMcpqP45/Untitled-design-2022-07-21-T162550-066-1170x614.jpg" style="width:100%">
+      </div>
+  
+
+<script src="./script/code.js"></script>
     </main>
 
     <footer class="container-fluid">
