--- a/html/products.html
+++ b/html/products.html
@@ -44,7 +44,6 @@
     
   <main>
    
-
       <div id="breakfast">
         
       </div>
@@ -56,7 +55,6 @@
       </div>
    
     </main>
-
 
     <script src="../script/code.js"></script>
     <script src="../script/checkout.js"></script>
@@ -71,20 +69,13 @@
       </div>
 
         <div class="times">
-          <h6>Monday</h6>
-          <p>06:00-22:00</p>
-          <h6>Tuesday</h6>
-          <p>06:00-22:00</p>
-          <h6>Wednesday</h6>
-          <p>06:00-22:00</p>
-          <h6>Thursday</h6>
-          <p>06:00-22:00</p>
-          <h6>Friday</h6>
-          <p>06:00-21:00</p>
-          <h6>Saturday</h6>
-          <p>06:00-21:00</p>
-          <h6>Sunday</h6>
-          <p>06:00-21:00</p>
+          <h6>Monday 06:00-22:00</h6>
+          <h6>Tuesday 06:00-22:00</h6>
+          <h6>Wednesday 06:00-22:00</h6>        
+          <h6>Thursday 06:00-22:00</h6>   
+          <h6>Friday 06:00-21:00</h6>   
+          <h6>Saturday 06:00-21:00</h6>
+          <h6>Sunday06:00-21:00</h6>
         </div>
 
         <div class="social-icons">
@@ -98,3 +89,4 @@
     </footer>
   </body>
 </html>
+https://uigradients.com/#DanceToForget
