--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
           <!-- NAVIGATION MENUS -->
           <div class="menu">
             <li><a href="./index.html">Home</a></li>
-            <li><a onclick="dostuff()">About</a></li>
+            <li><a href="./html/about.html" onclick="dostuff()" >About</a></li>
 
-            <li class="mainmenu" id="menuMain" href="html/products.html">
+            <li class="mainmenu" id="menuMain" >
               <a onclick="showMenu() ">Menu</a>
 
               <!-- DROPDOWN MENU -->
               <div id="menuContainer"></div>
             </li>
-            <li><a href="">Contact</a></li>
+            <li><a href="./html/contact.html">Contact</a></li>
           </div>
         </ul>
       </nav>
