--- a/html/contact.html
+++ b/html/contact.html
@@ -80,40 +80,34 @@
           </main>
 
 
-    <footer class="container-fluid">
-        <div class="find-us">
-          <h5>Address</h5>
-          <p>129 bumblebee avanue </p>
-          <h5>Contacts us</h5>
-          <p></p>
-          <p></p>
-        </div>
   
-          <div class="times">
-            <h6>Monday</h6>
-            <p>06:00-22:00</p>
-            <h6>Tuesday</h6>
-            <p>06:00-22:00</p>
-            <h6>Wednesday</h6>
-            <p>06:00-22:00</p>
-            <h6>Thursday</h6>
-            <p>06:00-22:00</p>
-            <h6>Friday</h6>
-            <p>06:00-21:00</p>
-            <h6>Saturday</h6>
-            <p>06:00-21:00</p>
-            <h6>Sunday</h6>
-            <p>06:00-21:00</p>
-          </div>
-  
-          <div class="social-icons">
-            <h5>follow us</h5>
-            <a href="#"><img src="" alt="Facebook" /></a>
-            <a href="#"><img src="" alt="Twitter" /></a>
-            <a href="#"><img src="" alt="Youtube" /></a>
-            <a href="#"><img src="" alt="Instagram" /></a>
-          </div>
-        </div>
-      </footer>
+          <footer class="container-fluid">
+            <div class="find-us">
+              <h5>Address</h5>
+              <p>129 bumblebee avanue </p>
+              <h5>Contacts us</h5>
+              <p></p>
+              <p></p>
+            </div>
+      
+              <div class="times">
+                <h6>Monday 06:00-22:00</h6>
+                <h6>Tuesday 06:00-22:00</h6>
+                <h6>Wednesday 06:00-22:00</h6>        
+                <h6>Thursday 06:00-22:00</h6>   
+                <h6>Friday 06:00-21:00</h6>   
+                <h6>Saturday 06:00-21:00</h6>
+                <h6>Sunday06:00-21:00</h6>
+              </div>
+      
+              <div class="social-icons">
+                <h5>follow us</h5>
+                <a href="#"><img src="" alt="Facebook" /></a>
+                <a href="#"><img src="" alt="Twitter" /></a>
+                <a href="#"><img src="" alt="Youtube" /></a>
+                <a href="#"><img src="" alt="Instagram" /></a>
+              </div>
+            </div>
+          </footer>
 </body>
 </html>
