--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <!-- NAVIGATION MENUS -->
           <div class="menu">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./html/about.html" onclick="dostuff()" >About</a></li>
+            <li><a href="./html/about.html" >About</a></li>
 
             <li class="mainmenu" id="menuMain" >
               <a onclick="showMenu() ">Menu</a>
