--- a/html/contact.html
+++ b/html/contact.html
@@ -62,7 +62,7 @@
                     <label>
                      <p> Your mobile number:</p>
                       <input type="text" name="cellphone" required />
-                    </label>
+                    </label> ]
                   </div>
                   <div>
                     <label>
