--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+
       <nav class="navbar">
         <!-- LOGO -->
         <div class="logo"></div>
@@ -27,11 +28,7 @@
           <!-- NAVIGATION MENUS -->
           <div class="menu">
             <li><a href="./index.html">Home</a></li>
-<<<<<<< HEAD
-            <li><a href="./html/about.html" onclick="dostuff()" >About</a></li>
-=======
-            <li><a href="./html/about.html" >About</a></li>
->>>>>>> d0311ed0ad0b0fc4ae2a4193c8f2de09c1e69ed4
+            <li><a href="./html/about.html" " >About</a></li>
 
             <li class="mainmenu" id="menuMain" >
               <a onclick="showMenu() ">Menu</a>
@@ -39,10 +36,15 @@
               <!-- DROPDOWN MENU -->
               <div id="menuContainer"></div>
             </li>
-            <li><a href="./html/contact.html">Contact</a></li>
-          </div>
+            <li>
+            <a href="#" id="myBtn"><i class="fa-solid fa-cart-shopping"></i></a>
+          
+          </li>
+           <li><a href="./html/contact.html">Contact</a></li>
+           </div>
         </ul>
       </nav>
+
     </header>
     <main>
       
@@ -88,6 +90,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://kit.fontawesome.com/850ca6a355.js" crossorigin="anonymous"></script>
     <script>
       var myIndex = 0;
 carousel();
